# parallel_parking

./: .gitignore  README.md  graphplotter.py  index.html  merge_pose_steer.py  pathtest.py  spawn_car.py
Pose_and_steer/30/: Steer30_x=20_steer=9_yaw=28_pose.txt  Steer30_x=20_steer=9_yaw=28_steer.txt  (+15 more)
others/: Geometric_Path_Planning_Full.txt  note.md
src/lka_bringup/: CMakeLists.txt  package.xml
src/lka_bringup/config/: objects copy 2.json  objects copy.json  objects.json
src/lka_bringup/data/car_info/: ford.mustang_dimensions.json  lincoln.mkz_2020_dimensions.json  tesla.model3_dimensions.json
src/lka_bringup/data/results/clip/: park_7.2_35.0_1.webm
src/lka_bringup/data/results/csv/: park_5.2_30.0_1.csv  park_5.7_30.0_1.csv  park_5.7_35.0_1.csv  park_5.7_40.0_1.csv  park_5.7_40.0_2.csv  park_6.2_30.0_1.csv  park_6.2_35.0_1.csv  park_6.2_35.0_2.csv  park_6.2_35.0_3.csv  park_6.2_40.0_1.csv  park_6.2_40.0_2.csv  park_6.7_30.0_1.csv  park_6.7_30.0_2.csv  park_6.7_35.0_1.csv  park_6.7_35.0_2.csv  park_6.7_40.0_1.csv  park_6.7_40.0_2.csv  park_7.2_30.0_1.csv  park_7.2_35.0_1.csv  park_7.2_35.0_2.csv  park_7.2_40.0_1.csv
src/lka_bringup/launch/: bring_up_carla.launch.py  carla_spawn_vehicle.launch.py  parking_control.launch.py
src/lka_bringup/scripts/: car_info.py  log_data copy.py  log_data.py  park_planning copy 2.py  park_planning copy 3.py  park_planning copy 4.py  park_planning copy 5.py  park_planning copy 6.py  park_planning copy.py  park_planning.py  park_planning2.py  plot2.py  plot_results copy.py  plot_results.py  update_spawn_config.py
(+42 files in other folders)
